# nexus

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  refresh-db.sh  start.sh  test-budget-mode.ts  tsconfig.base.json
.claude/: ralph-loop.local.md
apps/api/: .env.example  package.json
apps/cli/: package.json
apps/hooks/: README.md  install.ts  package.json
apps/mcp-server/: package.json
apps/web/: package.json  vite.config.ts
archives/planning/: roadmap-now-next-later.md  schema.sql
archives/product/: 04-prd.md  06-metrics-kpis.md  07-risks.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION_COMPLETE.md  MCP_HTTP_DEPLOYMENT.md  MCP_SETUP.md  MCP_USAGE.md  README.md  STATUS.md  VPS_DEPLOYMENT.md
docs/archive/: FIXES_APPLIED.md  HYDRATION_FIX_REPORT.md  PO_SKILL_TOKEN_OPTIMIZATION.md  RAPPORT_ANALYSE.md  SKILLS_OPTIMIZATION_COMPLETE.md  SKILLS_OPTIMIZATION_PLAN.md  memo-optimized-skill.md  po-optimized-skill.md
free-context-mcp/: package-lock.json  package.json  test.mjs
free-context-mcp/src/: index.ts
free-examples/: QUICK_START.md  README.md  TEST_MCP.md
front/: .env.example  eslint.config.js  package.json  vite.config.ts
ralph/: README.md  __init__.py  pyproject.toml
ralph-dashboard/: package.json  ralph-mcp-wrapper.sh
ralph/db/: __init__.py  schema.sql
ralph/hooks/: __init__.py  capture.py  context.py  summary.py
ralph/mcp/: server.py
scripts/: reset-db.sh
server/: .env.example  .env.test  .gitignore  LICENSE  README.md  drizzle.config.ts  package.json  tsconfig.json
(+205 files in other folders)
