[project]
name = "ralph-v3"
version = "3.0.0"
description = "Minimal context management system for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=0.9.0",
  "anthropic>=0.40.0",
]

[project.scripts]
ralph-context = "ralph.hooks.context:main"
ralph-capture = "ralph.hooks.capture:main"
ralph-summary = "ralph.hooks.summary:main"
ralph-mcp = "ralph.mcp.server:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ralph"]

[tool.hatch.build]
editable-mode = "redirect"
